@@ -1,5 +1,6 @@
 ChangeLog 
 ==========
+- modified regex checking for cram header @PG adddupmarksupport (to handle pipeline change from bamsort to bamsormadup)
 - enabling skipping of Chromium library types 
 - test script and data files to run full test merge run (phix)
 - tokens_per_job can now be used from the daemon config
